# available_vacancies

./: .gitignore  README.md  config.py  main.py  pyproject.toml
code/: API_abstract.py  head_hunter_api.py  hh_abstract.py  json_saver.py  vacancy.py
data/: vacancies.json
src/: api_abstract.py  file_abstract.py  filter_functions.py  head_hunter_api.py  json_saver.py  vacancy.py
tests/: conftest.py  test_filter_functions.py  test_head_hunter_api.py  test_vacancies.json  test_vacancy.py
